welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: not found: value color
	setCouleurBrosse(c:color.red);
                           ^